--- a/css/style-about.css
+++ b/css/style-about.css
@@ -181,7 +181,7 @@ body._lock {
 
 .header__mobile-phone {
   position: absolute;
-  right: 15px;
+  right: 20px;
 }
 
 .header__mobile-phone svg {
@@ -677,7 +677,7 @@ body._lock {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 25%;
           flex: 0 0 25%;
-  padding: 10px 5px;
+  padding: 2px 2px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -707,15 +707,15 @@ body._lock {
 
 .mobile-menu__link svg {
   display: inline-block;
-  padding-bottom: 5px;
-  width: 20px;
+  padding-bottom: 2px;
+  width: 30px;
 }
 
 .mobile-menu__link span {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 100%;
           flex: 0 0 100%;
-  font-size: 11px;
+  font-size: 12px;
   text-align: center;
   color: #4a4742;
 }
@@ -825,8 +825,8 @@ body._lock {
   }
 
   100% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
+    -webkit-transform: scale(1);
+            transform: scale(1);
     opacity: 0;
   }
 }
@@ -843,8 +843,8 @@ body._lock {
   }
 
   100% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
+    -webkit-transform: scale(1);
+            transform: scale(1);
     opacity: 0;
   }
 }
@@ -3042,6 +3042,10 @@ textarea.form-popup__input {
 
   .mobile-menu {
     display: none;
+  }
+
+  .footer {
+    padding: 40px 0 0;
   }
 
   .footer__column {
