--- a/css/style-about.css
+++ b/css/style-about.css
@@ -1870,6 +1870,19 @@ textarea.form-popup__input {
   height: 50px;
 }
 
+.article__anchor {
+  position: absolute;
+  left: 0;
+  top: -100px;
+  width: 100%;
+  height: 1px;
+  background-color: transparent;
+}
+
+.article__item {
+  position: relative;
+}
+
 .article__item h2 {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2695,6 +2708,7 @@ textarea.form-popup__input {
 .about__article ul {
   padding-top: 15px;
   padding-left: 25px;
+  padding-bottom: 25px;
 }
 
 .about__article ul li {
@@ -3168,14 +3182,6 @@ textarea.form-popup__input {
     max-width: 660px;
   }
 
-  .mobile-menu {
-    display: none;
-  }
-
-  .desctop-menu {
-    display: block;
-  }
-
   .footer {
     padding: 40px 0 0;
   }
@@ -3610,6 +3616,14 @@ textarea.form-popup__input {
     margin-right: 10px;
   }
 
+  .mobile-menu {
+    display: none;
+  }
+
+  .desctop-menu {
+    display: block;
+  }
+
   .footer__column {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 25%;
@@ -3831,7 +3845,8 @@ textarea.form-popup__input {
   }
 
   .about ._container {
-    max-width: 970px;
+    max-width: 1120px;
+    padding: 0 75px;
   }
 
   .about__column_left {
@@ -3922,7 +3937,7 @@ textarea.form-popup__input {
   }
 
   .about ._container {
-    max-width: 1200px;
+    max-width: 1350px;
   }
 
   .about__column_middle {
@@ -3983,7 +3998,7 @@ textarea.form-popup__input {
 
 @media (min-width: 1400px) {
   .about ._container {
-    max-width: 1840px;
+    max-width: 1950px;
   }
 }
 
