--- a/css/style-about.css
+++ b/css/style-about.css
@@ -2965,6 +2965,11 @@ textarea.form-popup__input {
   font-size: 0;
   background: #0f64a0 url("../img/icons/about-icon.png") center/60px no-repeat;
   border-radius: 50%;
+  opacity: 0;
+  overflow: hidden;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .contents-about__button._active {
@@ -2978,9 +2983,14 @@ textarea.form-popup__input {
   background: #0f64a0 url("../img/icons/about-icon.png") left 15px center/35px no-repeat;
 }
 
+.contents-about__button._show {
+  opacity: 1;
+  overflow: visible;
+}
+
 .contents-about__back {
   position: fixed;
-  bottom: 20px;
+  bottom: 70px;
   right: 20px;
   display: block;
   margin: 50px auto 0;
